# orkworks

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CONTEXT.md  Containerfile  README.md  apm.yml  compose.yaml  okf.yaml  opencode.json  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: check-adr-consistency.sh  doc-check.sh  worktree-check.sh
.codex/: hooks.json
.codex/hooks/: doc-check-stop.sh  doc-check.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: docs.yml  pr-ci.yml  quality-audit.yml  release.yml
.superpowers/sdd/: task-2-report.md
DESIGN-IS-2026-06-19/: 00-scope.md  01-evidence.md  02-scorecard.md  03-verdict.md  04-handoff-prompt.md
apps/desktop/: electron-builder.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
crates/orkworksd/: Cargo.toml
crates/orkworksd/resources/: harnesses-v2.json
crates/orkworksd/scripts/: report-claude-session-from-hook.sh  report-opencode-session.sh
crates/orkworksd/src/: debug_state_injection.rs  git.rs  harness.rs  harness_registry.rs  main.rs  metadata.rs  migration.rs  peon.rs  plan_handoff.rs  providers.rs  session_types.rs  session_view.rs  watcher.rs  workspace_runtime.rs
crates/orkworksd/src/application/session/: commands.rs  handlers.rs  mod.rs  ports.rs
crates/orkworksd/src/domain/session/: entity.rs  events.rs  mod.rs  repository.rs  services.rs  value_objects.rs
crates/orkworksd/src/harness/: definition.rs  integration.rs  registry.rs  store.rs
crates/orkworksd/src/harness/integrations/: aider.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  opencode.rs
crates/orkworksd/src/http/: harness_handlers.rs  hook_handlers.rs  mod.rs  provider_handlers.rs  retention_handlers.rs  session_handlers.rs
crates/orkworksd/src/infrastructure/: mod.rs  session_git.rs  session_module.rs  session_pty.rs  session_repository.rs
crates/orkworksd/src/runtime/: mod.rs  observed_status.rs  peon_runtime.rs  retention.rs  session_runtime.rs  terminal_http.rs  terminal_runtime.rs
crates/orkworksd/tests/: mock-peon-harness.sh
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/adr/: 0001-record-architecture-decisions.md  0002-electron-react-typescript-desktop.md  0003-rust-backend-axum-localhost.md  0012-peon-repo-scope.md  (+28 more)
orkworks/: .gitignore
specs/: native-harness-voice-support.md  orkworks-mvp.md  release-pipeline.md  review-queue.md  taskmaster.md
(+248 files in other folders)
