[package]
name = "orkworksd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
notify = { version = "7", features = ["macos_kqueue"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
git2 = "0.19"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# ReplaceFileW preserves Windows replacement semantics for existing targets;
# MoveFileExW publishes new targets without clobbering a raced creation.
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
